--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-intl": "^6.0.4",
     "swr": "^1.3.0"
   },
   "devDependencies": {
