--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-intl": "^6.0.4",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
