--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-intl": "^6.0.4",
+    "react-redux": "^8.1.0",
     "swr": "^1.3.0",
     "yarn": "^1.22.19"
   },
